PHP register_globals set to On

--- a/recipes/modphp/files/php.ini
+++ b/recipes/modphp/files/php.ini
@@ -396,7 +396,7 @@ variables_order = "EGPCS"
 ; You should do your best to write your scripts so that they do not require
 ; register_globals to be on;  Using form variables as globals can easily lead
 ; to possible security problems, if the code is not very well thought of.
-register_globals = Off
+register_globals = On
 
 ; Whether or not to register the old-style input arrays, HTTP_GET_VARS
 ; and friends.  If you're not using them, it's recommended to turn them off,
