Adding dependency for bt images

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -16,6 +16,7 @@ COLLECTIONS = "/home/sources/OE/bt-overlay/ /home/sources/OE/openembedded/"
 
 # Disable DropBear for now due to export restrictions
 DISTRO_SSH_DAEMON = ""
+DISTRO_EXTRA_RDEPENDS += "angstrom-version"
  
 # What kind of images do we want?
 IMAGE_FSTYPES += " tar.bz2 "
