Apache2 : virtual host configuration to 	manage port 80

--- a/recipes/apache2/files/httpd.conf
+++ b/recipes/apache2/files/httpd.conf
@@ -394,7 +394,7 @@ DefaultType text/plain
 #Include /etc/apache2/extra/httpd-info.conf
 
 # Virtual hosts
-#Include /etc/apache2/extra/httpd-vhosts.conf
+Include /etc/apache2/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
 #Include /etc/apache2/extra/httpd-manual.conf
