--- a/conf/local.conf
+++ b/conf/local.conf
@@ -19,7 +19,7 @@ DISTRO_SSH_DAEMON = ""
 DISTRO_EXTRA_RDEPENDS += "angstrom-version"
  
 # What kind of images do we want?
-IMAGE_FSTYPES += " tar.bz2 "
+IMAGE_FSTYPES += " tar.bz2 ext3 "
 
 # Set TMPDIR instead of defaulting it to $pwd/tmp
 TMPDIR = "/home/sources/OE/${DISTRO}-dev"
