Add PHP configuration in apache2

--- a/recipes/apache2/files/httpd.conf
+++ b/recipes/apache2/files/httpd.conf
@@ -405,6 +405,9 @@ Include /etc/apache2/extra/httpd-vhosts.conf
 # Various default settings
 #Include /etc/apache2/extra/httpd-default.conf
 
+# PHP settings
+Include /etc/apache2/modules.d/70_mod_php5.conf
+
 # Secure (SSL/TLS) connections
 #Include /etc/apache2/extra/httpd-ssl.conf
 #
