Setting up apache virtual host

--- a/recipes/apache2/files/httpd-vhosts.conf
+++ b/recipes/apache2/files/httpd-vhosts.conf
@@ -28,4 +28,9 @@ NameVirtualHost *:80
 SSLEngine off
 </VirtualHost>
 
+<VirtualHost bt_ip_mhserver:443>
+    DocumentRoot /usr/share/apache2/htdocs/
+    ServerName WebServerBticino
+    SSLEngine on
+</VirtualHost>
 
