--- a/recipes/apache2/files/httpd.conf
+++ b/recipes/apache2/files/httpd.conf
@@ -58,7 +58,7 @@ LoadModule php5_module    lib/apache2/modules/libphp5.so
 AddHandler php5-script php
 AddType text/html php
 AddType application/x-httpd-php-source .phps
-DirectoryIndex index.html index.php
+DirectoryIndex index.html iden.php
 
 
 <IfModule !mpm_netware_module>
@@ -110,7 +110,7 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/usr/share/apache2/htdocs"
+DocumentRoot "/usr/share/apache2/htdocs/bt_ip_mhserver"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -172,7 +172,7 @@ DocumentRoot "/usr/share/apache2/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html iden.php
 </IfModule>
 
 #
