vsftpd: Fix configuration
        enabling chroot_list
        enabling user_list

--- a/recipes/vsftpd/files/vsftpd.conf
+++ b/recipes/vsftpd/files/vsftpd.conf
@@ -96,7 +96,7 @@ connect_from_port_20=YES
 # You may specify an explicit list of local users to chroot() to their home
 # directory. If chroot_local_user is YES, then this list becomes a list of
 # users to NOT chroot().
-#chroot_list_enable=YES
+chroot_list_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd.chroot_list
 #
@@ -106,3 +106,5 @@ connect_from_port_20=YES
 # the presence of the "-R" option, so there is a strong case for enabling it.
 #ls_recurse_enable=YES
 
+# userlist_enable
+userlist_enable=YES
